test_errors.txt
   Compiling mapmap-io v0.2.0 (C:\Users\Vinyl\Desktop\VJMapper\VjMapper\crates\mapmap-io)
   Compiling mapmap v0.2.0 (C:\Users\Vinyl\Desktop\VJMapper\VjMapper\crates\mapmap)
   Compiling mapmap-render v0.2.0 (C:\Users\Vinyl\Desktop\VJMapper\VjMapper\crates\mapmap-render)
error[E0063]: missing field `last_update` in initializer of `App`
   --> crates\mapmap\src\main.rs:248:23
    |
248 |         let mut app = Self {
    |                       ^^^^ missing `last_update`

For more information about this error, try `rustc --explain E0063`.
error: could not compile `mapmap` (bin "MapFlow" test) due to 1 previous error
warning: build failed, waiting for other jobs to finish...
